Some updates to the client-side asset management: 1. Created a structure to the asset cache depending upon where the asset was loaded from: that is, if it was loaded from    a module, store underneath a directory in the cache so that it does not conflict with similarly named assets loaded    from other modules. 2. Created client-side stubs for the list of installed modules. The asset manager now consults the client-side module    manager to resolve a module name into a list of possible asset servers. 3. Fixed issue where if the asset exists in the cache database, but not in the cache itself, properly update the database    record.